Start editing layout issue

--- a/src/containers/shipment/screens/main-screen/styles.css
+++ b/src/containers/shipment/screens/main-screen/styles.css
@@ -161,3 +161,8 @@
     border-color: #000000 !important;
     margin: 20px !important;
 }
+.col-scroll{
+    /* background-color: rebeccapurple; */
+    overflow-y: scroll;
+    height: 60vh;
+}
